# polay

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  POLAY_Whitepaper.py  README.md  docker-compose.mainnet.yml  docker-compose.testnet.yml  docker-compose.yml
.github/workflows/: ci.yml  docker.yml  docs.yml
apps/admin/: index.html  package-lock.json  package.json
apps/admin/src/: App.tsx  api.ts  index.css
apps/admin/src/components/: Layout.tsx
apps/admin/src/hooks/: useWebSocket.ts
apps/admin/src/pages/: Dashboard.tsx  Deploy.tsx  Governance.tsx  Network.tsx  Validators.tsx
apps/devnet/: config.json
apps/explorer/: index.html  package.json  vite.config.ts
apps/explorer-api/: Cargo.toml  Dockerfile
apps/explorer-api/src/: main.rs  rpc_client.rs
apps/explorer/src/: App.tsx  api.ts  index.css  main.tsx
apps/explorer/src/components/: Layout.tsx
apps/explorer/src/pages/: AccountDetail.tsx  BlockDetail.tsx  Dashboard.tsx  TxDetail.tsx
apps/faucet/: Cargo.toml  Dockerfile
apps/faucet-ui/: index.html
apps/faucet/src/: main.rs
apps/indexer/: Cargo.toml  Dockerfile
apps/indexer/migrations/: 001_initial.sql  002_complete_coverage.sql
apps/indexer/src/: db.rs  indexer.rs  main.rs  rpc_client.rs  types.rs
apps/mainnet/: config.json
crates/polay-attestation/: Cargo.toml
crates/polay-attestation/src/: lib.rs
crates/polay-config/: Cargo.toml
crates/polay-config/src/: lib.rs
crates/polay-consensus/: Cargo.toml
crates/polay-consensus/src/: error.rs  evidence.rs  lib.rs  proposer.rs  state_machine.rs  types.rs
crates/polay-crypto/: Cargo.toml
crates/polay-crypto/benches/: crypto_bench.rs
crates/polay-crypto/src/: error.rs  hash.rs  keypair.rs  lib.rs  public_key.rs  transaction.rs
crates/polay-execution/: Cargo.toml
crates/polay-execution/benches/: execution_bench.rs
crates/polay-execution/src/: access_set.rs  error.rs  executor.rs  gas.rs  input_validation.rs  invariants.rs  lib.rs  parallel.rs  scheduler.rs  validator.rs
crates/polay-execution/src/modules/: assets.rs  attestation.rs  governance.rs  guild.rs  identity.rs  market.rs  mod.rs  rental.rs  session.rs  staking.rs  tournament.rs  transfer.rs
crates/polay-genesis/: Cargo.toml
crates/polay-genesis/src/: lib.rs
crates/polay-identity/: Cargo.toml
crates/polay-identity/src/: lib.rs
crates/polay-market/: Cargo.toml
crates/polay-market/src/: lib.rs
crates/polay-mempool/: Cargo.toml
crates/polay-mempool/benches/: mempool_bench.rs
crates/polay-mempool/src/: error.rs  lib.rs  pool.rs
crates/polay-network/: Cargo.toml
crates/polay-network/src/: behaviour.rs  error.rs  lib.rs  message.rs  peer_manager.rs  rate_limiter.rs  service.rs  topics.rs
crates/polay-node/: Cargo.toml
crates/polay-node/src/: bench_runner.rs  lib.rs  main.rs  wallet.rs
crates/polay-rpc/: Cargo.toml
crates/polay-rpc/src/: error.rs  event_bus.rs  lib.rs  rate_limiter.rs  server.rs  types.rs
crates/polay-staking/: Cargo.toml
crates/polay-staking/src/: lib.rs
crates/polay-state/: Cargo.toml
crates/polay-state/benches/: state_bench.rs
crates/polay-state/src/: error.rs  keys.rs  lib.rs  merkle.rs  overlay.rs  snapshot.rs  state_view.rs  state_writer.rs  store.rs  sync.rs
crates/polay-types/: Cargo.toml
crates/polay-types/src/: account.rs  address.rs  asset.rs  attestation.rs  block.rs  economics.rs  epoch.rs  error.rs  event.rs  governance.rs  guild.rs  hash.rs  identity.rs  lib.rs  market.rs  rental.rs  session.rs  signature.rs  staking.rs  tournament.rs  transaction.rs
crates/polay-validator/: Cargo.toml
crates/polay-validator/src/: block_producer.rs  block_validator.rs  chain.rs  epoch.rs  error.rs  lib.rs  validator_loop.rs
deploy/hetzner/: deploy-validators.sh  main.tf  polay-validator.service  terraform.tfvars.example
deploy/nginx/: polay-testnet.conf
deploy/terraform/: main.tf  terraform.tfvars.example
docs/: SECURITY_AUDIT.md  architecture.md  attestation.md  book.toml  consensus.md  execution.md  local-devnet.md  overview.md  roadmap.md  rpc.md  staking.md  state.md
docs/src/: SUMMARY.md  introduction.md  roadmap.md
docs/src/architecture/: consensus.md  execution.md  networking.md  overview.md  state.md
docs/src/gaming/: attestation.md  guilds.md  rentals.md  session-keys.md  tournaments.md
docs/src/guide/: getting-started.md  local-devnet.md  rpc-api.md  sdk.md  transaction-types.md
docs/src/ops/: cloud.md  docker.md  incident-response.md  monitoring.md  validator.md
docs/src/staking/: overview.md  tokenomics.md
monitoring/: Dockerfile.exporter  alerts.yml  metrics-exporter.py  prometheus-mainnet.yml  prometheus.yml
monitoring/grafana/dashboards/: polay-overview.json
monitoring/grafana/provisioning/dashboards/: dashboards.yml
scripts/: e2e-smoke-test.sh  genesis-ceremony.sh  init-devnet.sh  launch-testnet.sh  load-test.sh  mainnet-genesis.sh  mainnet-launch.sh  sample-transactions.sh  start-local.sh
sdk/ts/: package.json
sdk/ts/src/: client.ts  examples.ts  index.ts  keypair.ts  transaction.ts  types.ts
