[package]
name = "polay-faucet"
version = "0.1.0"
edition = "2021"
authors = ["POLAY Labs"]
description = "Testnet faucet for POLAY blockchain"

[workspace]

[[bin]]
name = "polay-faucet"
path = "src/main.rs"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive", "env"] }
dashmap = "6"
chrono = "0.4"
hex = "0.4"
ed25519-dalek = { version = "2", features = ["serde", "rand_core"] }
sha2 = "0.10"
rand = "0.8"
