[package]
name = "polay-attestation"
description = "Extended attestation module for the POLAY gaming blockchain"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
polay-types = { workspace = true }
polay-state = { workspace = true }
polay-crypto = { workspace = true }
polay-config = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }

[lints]
workspace = true
