[package]
name = "polay-crypto"
description = "Cryptographic primitives for the POLAY gaming blockchain"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
polay-types = { workspace = true }
ed25519-dalek = { workspace = true }
sha2 = { workspace = true }
rand = { workspace = true }
hex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
borsh = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "crypto_bench"
harness = false

[lints]
workspace = true
