[package]
name = "polay-execution"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
polay-types = { workspace = true }
polay-crypto = { workspace = true }
polay-state = { workspace = true }
polay-config = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
borsh = { workspace = true }
sha2 = { workspace = true }
rayon = { workspace = true }
hex = { workspace = true }

[dev-dependencies]
parking_lot = { workspace = true }
criterion = { workspace = true }
hex = { workspace = true }

[[bench]]
name = "execution_bench"
harness = false

[lints]
workspace = true
