[package]
name = "polay-market"
description = "Extended marketplace module for the POLAY gaming blockchain"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
polay-types = { workspace = true }
polay-state = { workspace = true }
polay-config = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }

[lints]
workspace = true
