[package]
name = "polay-network"
version.workspace = true
edition.workspace = true
authors.workspace = true

[features]
test-utils = []

[dependencies]
polay-types = { workspace = true }
polay-state = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
libp2p = { workspace = true }
