[package]
name = "polay-node"
version.workspace = true
edition.workspace = true
authors.workspace = true

[[bin]]
name = "polay"
path = "src/main.rs"

[[bin]]
name = "polay-wallet"
path = "src/wallet.rs"

[dependencies]
reqwest = { version = "0.12", features = ["json", "blocking"] }
polay-types = { workspace = true }
polay-crypto = { workspace = true }
polay-config = { workspace = true }
polay-genesis = { workspace = true }
polay-state = { workspace = true }
polay-mempool = { workspace = true }
polay-execution = { workspace = true }
polay-consensus = { workspace = true }
polay-network = { workspace = true }
polay-rpc = { workspace = true }
polay-validator = { workspace = true }
rayon = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
hex = { workspace = true }
