[package]
name = "polay-types"
description = "Core types for the POLAY gaming blockchain"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
borsh = { workspace = true }
hex = { workspace = true }
bs58 = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }

[lints]
workspace = true
